[gd_scene load_steps=15 format=3 uid="uid://o8vjxrpicjsm"]

[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="1_bk4ch"]
[ext_resource type="PackedScene" uid="uid://cqs72exlwm6at" path="res://scenes/menu/char_select.tscn" id="2_6qq11"]
[ext_resource type="Texture2D" uid="uid://8pvgp7ipunso" path="res://assets/portraits/solbadguy.png" id="3_n1nv2"]
[ext_resource type="Texture2D" uid="uid://mn1hj4i3k7l7" path="res://assets/cards/card_border_highlight_selected.png" id="4_ekoth"]
[ext_resource type="Texture2D" uid="uid://ded5jrn5yju2j" path="res://assets/cards/card_border_highlight_pressed.png" id="5_xie03"]
[ext_resource type="AudioStream" uid="uid://0cjnajbh1p00" path="res://assets/sounds/match_available.mp3" id="6_6ru3f"]
[ext_resource type="AudioStream" uid="uid://bhetjnrl0n7o" path="res://assets/sounds/match_notification.mp3" id="7_pt1r5"]
[ext_resource type="AudioStream" uid="uid://bftf3ehq3hfho" path="res://assets/sounds/mainmenu_bgm.mp3" id="8_vcasp"]
[ext_resource type="PackedScene" uid="uid://bor5msyih7c5j" path="res://scenes/menu/modal_list.tscn" id="9_ro6xo"]
[ext_resource type="PackedScene" uid="uid://b8kmmrd5jmqdd" path="res://scenes/game/modal_dialog.tscn" id="10_stodf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0f2dl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i6bch"]
texture = ExtResource("4_ekoth")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tii02"]
texture = ExtResource("5_xie03")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_22gnv"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_bk4ch")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0.482353, 0.482353, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 101.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 76
text = "Exceed GG Fan Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.5
offset_top = -88.0
offset_right = 164.5
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSAIBox" type="HBoxContainer" parent="MenuList"]
layout_mode = 2

[node name="FightSettings" type="VBoxContainer" parent="MenuList/VSAIBox"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MenuList/VSAIBox/FightSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Start vs AI"

[node name="RandomizeFirstCheckbox" type="CheckBox" parent="MenuList/VSAIBox/FightSettings"]
layout_mode = 2
text = "Randomize First Player VS AI"

[node name="OpponentChooser" type="PanelContainer" parent="MenuList/VSAIBox"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuList/VSAIBox/OpponentChooser"]
custom_minimum_size = Vector2(250, 120)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuList/VSAIBox/OpponentChooser/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuList/VSAIBox/OpponentChooser/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuList/VSAIBox/OpponentChooser/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Choose AI Fighter"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MenuList/VSAIBox/OpponentChooser/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharPortrait" type="TextureRect" parent="MenuList/VSAIBox/OpponentChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_n1nv2")
expand_mode = 3
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MenuList/VSAIBox/OpponentChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="CharName" type="Label" parent="MenuList/VSAIBox/OpponentChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Sol Badguy"

[node name="ChangePlayerCharacterButton" type="Button" parent="MenuList/VSAIBox/OpponentChooser"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_0f2dl")
theme_override_styles/hover = SubResource("StyleBoxTexture_i6bch")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tii02")

[node name="MatchmakeButton" type="Button" parent="MenuList"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
disabled = true
text = "Join Next Match"

[node name="JoinBox" type="HBoxContainer" parent="MenuList"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="MenuList/JoinBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
disabled = true
text = "Join Room"

[node name="RoomNameBox" type="LineEdit" parent="MenuList/JoinBox"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "DefaultRoom"
placeholder_text = "Room Name"
alignment = 1
select_all_on_focus = true

[node name="CancelButton" type="Button" parent="MenuList"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Cancel"

[node name="QuitButton" type="Button" parent="MenuList"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Quit"

[node name="PlayerChooser" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 260.0
offset_right = 282.0
offset_bottom = 380.0

[node name="MarginContainer" type="MarginContainer" parent="PlayerChooser"]
custom_minimum_size = Vector2(250, 120)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerChooser/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PlayerChooser/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PlayerChooser/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Choose Your Fighter"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerChooser/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharPortrait" type="TextureRect" parent="PlayerChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_n1nv2")
expand_mode = 3
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="PlayerChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="CharName" type="Label" parent="PlayerChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Sol Badguy"

[node name="ChangePlayerCharacterButton" type="Button" parent="PlayerChooser"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_0f2dl")
theme_override_styles/hover = SubResource("StyleBoxTexture_i6bch")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tii02")

[node name="PlayerNameBox" type="TextEdit" parent="."]
custom_minimum_size = Vector2(100, 50)
layout_mode = 0
offset_left = 20.0
offset_top = 120.0
offset_right = 300.0
offset_bottom = 181.0
theme_override_font_sizes/font_size = 34
placeholder_text = "Player Name"
editable = false

[node name="UpdateNameButton" type="Button" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 190.0
offset_right = 264.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 32
text = "Update Name"

[node name="EnterReplayBox" type="TextEdit" parent="."]
custom_minimum_size = Vector2(100, 50)
layout_mode = 0
offset_left = 20.0
offset_top = 440.0
offset_right = 308.0
offset_bottom = 501.0
theme_override_font_sizes/font_size = 34
placeholder_text = "Paste Replay Here"

[node name="ViewReplayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 510.0
offset_right = 264.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 32
text = "View Replay"

[node name="PlayerList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 944.0
offset_top = 228.0
offset_right = 1247.0
offset_bottom = 590.0
theme_override_font_sizes/font_size = 24
item_count = 2
item_0/text = "Player"
item_1/text = "Player 2"

[node name="PlayerListLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 946.0
offset_top = 178.0
offset_right = 1210.0
offset_bottom = 225.0
theme_override_font_sizes/font_size = 34
text = "Player    -      Room"

[node name="ReconnectToServerButton" type="Button" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 589.0
offset_right = 768.0
offset_bottom = 681.0
theme_override_font_sizes/font_size = 32
text = "Reconnect to 
Server"

[node name="ServerStatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 674.0
offset_right = 791.0
offset_bottom = 719.0
theme_override_font_sizes/font_size = 32
text = "Connecting to server...."

[node name="CharSelect" parent="." instance=ExtResource("2_6qq11")]
visible = false

[node name="MatchAvailableAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6ru3f")

[node name="MatchStartingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pt1r5")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_vcasp")
volume_db = -9.0

[node name="PlayerListContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 1050.0
offset_top = 60.0
offset_right = 1196.0
offset_bottom = 110.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_22gnv")

[node name="PlayerListHBox" type="HBoxContainer" parent="PlayerListContainer"]
layout_mode = 2

[node name="PlayersButton" type="Button" parent="PlayerListContainer/PlayerListHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Player List
"

[node name="PlayerCount" type="Label" parent="PlayerListContainer/PlayerListHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "10"

[node name="RoomListContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 1050.0
offset_top = 120.0
offset_right = 1196.0
offset_bottom = 170.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_22gnv")

[node name="RoomListHBox" type="HBoxContainer" parent="RoomListContainer"]
layout_mode = 2

[node name="MatchesButton" type="Button" parent="RoomListContainer/RoomListHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Match List"

[node name="MatchCount" type="Label" parent="RoomListContainer/RoomListHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "10"

[node name="SettingsPanel" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 20.0
offset_top = 600.0
offset_right = 291.0
offset_bottom = 700.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 2

[node name="BGMCheckBox" type="CheckBox" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "BGM"

[node name="GameSoundsCheckBox" type="CheckBox" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "Game Turn Sound"

[node name="ModalList" parent="." instance=ExtResource("9_ro6xo")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="ModalDialog" parent="." instance=ExtResource("10_stodf")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="VersionContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 950.0
offset_top = 650.0
offset_right = 1083.0
offset_bottom = 702.0

[node name="MarginContainer" type="MarginContainer" parent="VersionContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VersionContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ClientVersionHeader" type="Label" parent="VersionContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Build:"

[node name="ClientVersion" type="Label" parent="VersionContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "##"

[connection signal="pressed" from="MenuList/VSAIBox/FightSettings/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuList/VSAIBox/OpponentChooser/ChangePlayerCharacterButton" to="." method="_on_change_player_character_button_pressed" binds= [false]]
[connection signal="pressed" from="MenuList/MatchmakeButton" to="." method="_on_matchmake_button_pressed"]
[connection signal="pressed" from="MenuList/JoinBox/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="text_changed" from="MenuList/JoinBox/RoomNameBox" to="." method="_on_room_name_box_text_changed"]
[connection signal="pressed" from="MenuList/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MenuList/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PlayerChooser/ChangePlayerCharacterButton" to="." method="_on_change_player_character_button_pressed" binds= [true]]
[connection signal="focus_entered" from="PlayerNameBox" to="." method="_on_player_name_box_focus_entered"]
[connection signal="text_changed" from="PlayerNameBox" to="." method="_on_player_name_box_text_changed"]
[connection signal="pressed" from="UpdateNameButton" to="." method="_on_update_name_button_pressed"]
[connection signal="focus_entered" from="EnterReplayBox" to="." method="_on_enter_replay_box_focus_entered"]
[connection signal="pressed" from="ViewReplayButton" to="." method="_on_view_replay_button_pressed"]
[connection signal="pressed" from="ReconnectToServerButton" to="." method="_on_reconnect_to_server_button_pressed"]
[connection signal="close_character_select" from="CharSelect" to="." method="_on_char_select_close_character_select"]
[connection signal="select_character" from="CharSelect" to="." method="_on_char_select_select_character"]
[connection signal="pressed" from="PlayerListContainer/PlayerListHBox/PlayersButton" to="." method="_on_players_button_pressed"]
[connection signal="pressed" from="RoomListContainer/RoomListHBox/MatchesButton" to="." method="_on_matches_button_pressed"]
[connection signal="toggled" from="SettingsPanel/VBoxContainer/BGMCheckBox" to="." method="_on_bgm_check_box_toggled"]
[connection signal="toggled" from="SettingsPanel/VBoxContainer/GameSoundsCheckBox" to="." method="_on_game_sounds_check_box_toggled"]
[connection signal="join_match_pressed" from="ModalList" to="." method="_on_modal_list_join_match_pressed"]
[connection signal="observe_match_pressed" from="ModalList" to="." method="_on_modal_list_observe_match_pressed"]
